# libkperfdata

./: .clang-format  CMakeLists.txt  README.md
include/kperfdata/: kperfdata.h  macros.h
src/: kperfdata.c
test/: kperfdata_test.cpp
